Update fixed header z-index

--- a/src/app/resources/resources.component.scss
+++ b/src/app/resources/resources.component.scss
@@ -9,6 +9,7 @@
 }
 .fixed-header{
   position: fixed;
+  z-index: 9999;
   width: 990px;
   max-width: 990px;
   min-width: 990px;
